# Akinator

./: .gitignore  BinaryDecisionTree.h  CART.cpp  CART.h  CMakeLists.txt  Extract.cpp  README.md  SimpleString.cpp  SimpleString.h  Techhi.cpp  Techhi.h  Tree.cpp  Tree.h  database.csv  database.txt  fruits.csv  run.ps1  run.sh  utils.cpp  utils.h
data/: anime_data_refined.csv  anime_traits.csv  anime_traits_refined.csv  test.csv
src/: BinaryDecisionTree.h  CART.cpp  CART.h  Codec.h  Techhi.cpp  utils.cpp  utils.h
web/: Techhi.cpp  Techhi.js  Techhi.wasm  hello.data  hello.js  hello.wasm  index.html  package-lock.json  play.html  run.ps1  run.sh  tailwind.config.js
